Fixed footer on mobile

--- a/custom/navbar.css
+++ b/custom/navbar.css
@@ -38,6 +38,9 @@
         padding-top: 2em;
         padding-bottom: 0em;
     }
+    #footer .last{
+        text-align: left;
+    }
 
 }
 
@@ -66,6 +69,9 @@
     #mobile-menu-trigger{
         margin-top: -2em;
         margin-bottom: 0px;
+    }
+    #footer .last{
+        text-align: left;
     }
 }
 
@@ -97,7 +103,7 @@
 }
 
 #footer{
-    padding: 30px 0 0px 0;
+    padding: 30px 0 10px 0;
 }
 #footer-links h4{
     display: inline-block;
@@ -111,4 +117,7 @@
 }
 #footer-copyright p{
     padding-right: 55px;
+}
+#footer .last{
+    margin-bottom: 0;
 }
