--- a/custom/splash.css
+++ b/custom/splash.css
@@ -35,6 +35,7 @@
     }
     #content{
         padding-top: 0!important;
+        padding-bottom: 0!important;
     }
     .headline h1{
         margin-top: 2.5em;
